[gd_scene load_steps=8 format=3 uid="uid://8txwvscl2c7o"]

[ext_resource type="Texture2D" uid="uid://bdjkta0dwebq" path="res://main_menu/Cr√©ditos.png" id="1_73bwg"]
[ext_resource type="FontFile" uid="uid://qngqj5bn0l41" path="res://fonts/PatrickHand-Regular.ttf" id="2_73bwg"]
[ext_resource type="Texture2D" uid="uid://bl4t1im806cpq" path="res://main_menu/dialogo_Caixa.png" id="3_8pon5"]
[ext_resource type="Script" uid="uid://bd7ah62vwwvxf" path="res://main_menu/scripts/change_scenes_menu.gd" id="3_k5v2v"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ufssx"]
texture = ExtResource("1_73bwg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_64uou"]
texture = ExtResource("3_8pon5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s0hea"]
texture = ExtResource("3_8pon5")

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(28.8028, 16.1898)
theme_override_styles/panel = SubResource("StyleBoxTexture_ufssx")

[node name="return_menu" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 244.0
offset_bottom = 81.0
theme_override_colors/font_hover_color = Color(0.355363, 0.135636, 0.04622, 1)
theme_override_colors/font_color = Color(0.27451, 0.0980392, 0.027451, 1)
theme_override_colors/font_pressed_color = Color(0.337255, 0.219608, 0.0745098, 1)
theme_override_fonts/font = ExtResource("2_73bwg")
theme_override_font_sizes/font_size = 35
theme_override_styles/pressed = SubResource("StyleBoxTexture_64uou")
theme_override_styles/normal = SubResource("StyleBoxTexture_s0hea")
text = "Retornar ao Menu"
flat = true
language = "pt_BR"
script = ExtResource("3_k5v2v")

[connection signal="pressed" from="return_menu" to="return_menu" method="_on_menu_pressed"]
